// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> test props isLoading={false} label='button' 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#00b2ff",
      "borderTopLeftRadius": 0,
      "borderTopRightRadius": 0,
      "flexDirection": "row",
      "height": 48,
      "justifyContent": "center",
      "marginHorizontal": 48,
      "opacity": 1,
      "paddingHorizontal": 12,
      "paddingVertical": 12,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFF",
        "fontFamily": "SF Pro Text",
        "fontSize": 14,
        "fontWeight": "500",
        "letterSpacing": 0.45712,
        "lineHeight": 24.5,
      }
    }
  >
    button
  </Text>
</View>
`;

exports[`<Button /> test props isLoading={true} loadingLabel='loading' 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#00b2ff",
      "borderTopLeftRadius": 0,
      "borderTopRightRadius": 0,
      "flexDirection": "row",
      "height": 48,
      "justifyContent": "center",
      "marginHorizontal": 48,
      "opacity": 1,
      "paddingHorizontal": 12,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": -20,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          animating={true}
          animationDuration={1200}
          animationEasing={[Function]}
          color="white"
          interaction={true}
          renderComponent={[Function]}
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 20,
                  "height": 40,
                  "opacity": 0.5,
                  "transform": Array [
                    Object {
                      "scale": 0.4,
                    },
                  ],
                  "width": 40,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 20,
                  "height": 40,
                  "opacity": 1,
                  "transform": Array [
                    Object {
                      "scale": 0.4,
                    },
                  ],
                  "width": 40,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontFamily": "SF Pro Text",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0.45712,
          "lineHeight": 24.5,
        }
      }
    >
      loading
    </Text>
  </View>
</View>
`;
